--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.github.wasiqb.coteafs</groupId>
 		<artifactId>parent</artifactId>
-		<version>2.2.0</version>
+		<version>3.0.0</version>
 	</parent>
 
 	<scm>
@@ -31,13 +31,15 @@
 	</ciManagement>
 
 	<properties>
-		<appium-version>7.2.0</appium-version>
+		<appium-version>7.3.0</appium-version>
 		<selenium-version>3.141.59</selenium-version>
-		<coteafs.config.version>1.8.0</coteafs.config.version>
-		<coteafs.error.version>1.7.0</coteafs.error.version>
-		<coteafs.logger.version>1.8.0</coteafs.logger.version>
-		<commons.text.version>1.7</commons.text.version>
-		<coteafs.listeners.version>1.2.0</coteafs.listeners.version>
+		<coteafs.config.version>2.1.4</coteafs.config.version>
+		<coteafs.error.version>1.11.0</coteafs.error.version>
+		<coteafs.logger.version>2.2.0</coteafs.logger.version>
+		<commons.text.version>1.8</commons.text.version>
+		<coteafs.listeners.version>2.2.0</coteafs.listeners.version>
+		<lombok.version>1.18.10</lombok.version>
+		<coteafs.selenium.version>3.1.0</coteafs.selenium.version>
 	</properties>
 
 	<dependencies>
@@ -45,12 +47,6 @@
 			<groupId>com.github.wasiqb.coteafs</groupId>
 			<artifactId>configs</artifactId>
 			<version>${coteafs.config.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.yaml</groupId>
-					<artifactId>snakeyaml</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -127,6 +123,17 @@
 					<artifactId>selenium-java</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.wasiqb.coteafs</groupId>
+			<artifactId>selenium</artifactId>
+			<version>${coteafs.selenium.version}</version>
 		</dependency>
 	</dependencies>
 </project>
